other/res/restrict-automount-sa-token/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp
spec:
  containers:
  - image: nginx
    name: nginx
  automountServiceAccountToken: false 

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
      automountServiceAccountToken: true

---
apiVersion: v1
kind: Pod
metadata:
  name: policy-reporter
  labels:
    app.kubernetes.io/part-of: policy-reporter
spec:
  containers:
  - name: policy-reporter
    image: policy-reporter
    ports:
    - containerPort: 8080
  automountServiceAccountToken: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-policy-reporter
  labels:
    app.kubernetes.io/part-of: policy-reporter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
      automountServiceAccountToken: true
