other/res/restrict-automount-sa-token/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-automount-sa-token
policies:
- ../restrict-automount-sa-token.yaml
resources:
- resource.yaml
results:
- kind: Deployment
  policy: restrict-automount-sa-token
  resources:
  - mydeploy
  result: fail
  rule: validate-automountServiceAccountToken
- kind: Pod
  policy: restrict-automount-sa-token
  resources:
  - myapp-pod
  result: pass
  rule: validate-automountServiceAccountToken
- kind: Deployment
  policy: restrict-automount-sa-token
  resources:
  - deploy-policy-reporter
  result: skip
  rule: validate-automountServiceAccountToken
- kind: Pod
  policy: restrict-automount-sa-token
  resources:
  - policy-reporter
  result: skip
  rule: validate-automountServiceAccountToken
